# web_app_cc

./: .dockerignore  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  caddy.Dockerfile  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
artifacts/: README.md
backend/: app.py  scheduler.py  users.py
frontend/: app.js  i18n.js  index.html  landing.html  results.html  style.css
portfolio/: app.py  links.yaml
projects/health_assistant/: .gitattributes  ARCHITECTURE.md  CLAUDE.md  DEPLOY_HF.md  Dockerfile  README.md  pyproject.toml
projects/health_assistant/.streamlit/: config.toml
projects/health_assistant/app/: streamlit_app.py
projects/health_assistant/data/: patient_data.csv
projects/health_assistant/data/documents_data/markdowns/: medical_document_1002.md  medical_document_1004.md  medical_document_1005.md  medical_document_1028.md  medical_document_1030.md  medical_document_1031.md  medical_document_1032.md  medical_document_1034.md  medical_document_1037.md  medical_document_106.md  medical_document_107.md  medical_document_110.md  medical_document_115.md  medical_document_116.md  medical_document_117.md  medical_document_124.md  medical_document_139.md  medical_document_143.md  medical_document_147.md  medical_document_166.md  medical_document_192.md  medical_document_193.md  medical_document_194.md  medical_document_196.md  medical_document_199.md  medical_document_2.md  medical_document_206.md  medical_document_216.md  medical_document_220.md  medical_document_223.md  medical_document_226.md  medical_document_230.md  medical_document_237.md  medical_document_245.md  medical_document_249.md  medical_document_254.md  medical_document_260.md  medical_document_262.md  medical_document_267.md  medical_document_280.md  (+110 more)
projects/health_assistant/src/health_assistant/: config.py
projects/health_assistant/src/health_assistant/agent/: agent.py  model_provider.py  session_state.py  system_prompt.py
projects/health_assistant/src/health_assistant/analytics/: sandbox.py
projects/health_assistant/src/health_assistant/attachments/: image_loader.py  pdf_reader.py  types.py
projects/health_assistant/src/health_assistant/feedback/: log.py  validation.py
projects/health_assistant/src/health_assistant/guardrails/: input_filter.py  logger.py  output_filter.py  policies.py
projects/health_assistant/src/health_assistant/models/: feature_schema.py  predict.py  preprocessing.py  retrain.py  train_alt.py  train_copd.py
projects/health_assistant/src/health_assistant/observability/: mlflow_setup.py
projects/health_assistant/src/health_assistant/rag/: chunking.py  ingest_clinical_docs.py  ingest_medrag.py  reranker.py  retriever.py
projects/health_assistant/src/health_assistant/scripts/: bootstrap.py
projects/health_assistant/src/health_assistant/tools/: compare_patients.py  predict_patient_outcomes.py  python_analytics.py  save_cohort.py  search_clinical_documents.py  search_medical_knowledge.py  web_search.py
scripts/: keepalive.sh  test_scheduling.py
tests/: test_scheduler.py  (+2 more)
(+23 files in other folders)
