[project]
name = "health-assistant"
version = "0.1.0"
description = "Data Doctor - clinical analytics AI assistant (POC)"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Agent + LLM
    "strands-agents>=0.1.0",
    "openai>=1.50.0",
    # Models
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0,<1.9.0",  # pinned to match the version that pickled the model artifacts
    "shap>=0.52.0",  # 0.52 is the first version that parses XGBoost 3.x base_score arrays correctly
    "optuna>=3.6.0",
    "joblib>=1.4.0",
    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tabulate>=0.9.0",  # pandas optional dep for df.to_markdown() - the LLM reaches for this when asked for tables
    # RAG
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",  # standalone integration to avoid langchain_community deprecation warnings
    "langchain-classic>=1.0.0",      # EnsembleRetriever lives here in langchain 1.x
    "rank_bm25>=0.2.2",
    "datasets>=2.20.0",
    # UI
    "streamlit>=1.36.0",
    # Observability
    "mlflow>=2.14.0",
    # Misc
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "pypdf>=4.0.0",
    "pillow>=10.0.0",
    "google-search-results>=2.4.0",  # SerpAPIWrapper backend
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/health_assistant"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
